alignment fix

--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,7 @@
         font-family: 'Spartan', sans-serif;
         font-weight: 700;
         line-height: 1.7;
+        text-align: center;
     }
     .rate-txt {
         margin: 0 auto;
